# SPEAKUP

./: .gitignore  config.py  examples.py  main.py  pyproject.toml
actions/: __init__.py  executor.py
core/: __init__.py  hotkey.py  llm.py  ocr.py  prompts.py  stt.py  tts.py
